--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
     "sequelize": "^6.35.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
